Fix toolbar spacing

--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -1,5 +1,5 @@
 .Toolbar {
-    height: 60px;
+    height: 80px;
     width: 100%;
     position: fixed;
     top: 0;
@@ -9,4 +9,5 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    box-sizing: border-box;
 }
